[package]
name    = "pbbs"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon.workspace = true
num-traits.workspace = true
crossbeam   = "0.8.2"
parlay  = { path = "../parlay/" }
enhanced_rayon  = { path = "../enhanced_rayon/" }
clap = { version = "4.3.4", features = ["derive"] }

[features]
default = ["mem_safe", "rng_ind_safe", "sng_ind_safe"]
rng_ind_safe = ["enhanced_rayon/rng_ind_safe"]
rng_ind_unsafe = ["enhanced_rayon/rng_ind_unsafe"]
sng_ind_safe = ["enhanced_rayon/sng_ind_safe"]
sng_ind_unsafe = ["enhanced_rayon/sng_ind_unsafe"]
sng_ind_atomic = []
AW_safe = []
mem_safe = []


# MIS
[[bin]]
name    = "mis"
path    = "src/benchmarks/maximal_independent_set/mis_time.rs"
test    = false

# [[bin]]
# name    = "mis_check"
# path    = "src/benchmarks/maximal_independent_set/bench/mis_check.rs"
# test    = false

# MM
[[bin]]
name    = "mm"
path    = "src/benchmarks/maximal_matching/mm_time.rs"
test    = false

# [[bin]]
# name    = "mm_check"
# path    = "src/benchmarks/maximal_matching/bench/mm_check.rs"
# test    = false

# ISort
[[bin]]
name    = "isort"
path    = "src/benchmarks/integer_sort/isort_time.rs"
test    = false

# [[bin]]
# name    = "isort_check"
# path    = "src/benchmarks/integer_sort/bench/isort_check.rs"
# test    = false

# SF
[[bin]]
name    = "sf"
path    = "src/benchmarks/spanning_forest/sf_time.rs"
test    = false

# [[bin]]
# name    = "sf_check"
# path    = "src/benchmarks/spanning_forest/bench/sf_check.rs"
# test    = false

# MSF
[[bin]]
name    = "msf"
path    = "src/benchmarks/min_span_forest/msf_time.rs"
test    = false

# [[bin]]
# name    = "msf_check"
# path    = "src/benchmarks/min_span_forest/bench/msf_check.rs"
# test    = false

# Sort
[[bin]]
name    = "sort"
path    = "src/benchmarks/comparison_sort/sort_time.rs"
test    = false
